# paper-reading

./: .gitignore  .gitmodules  README.md  repos.txt  requirements.txt
01-zettelkasten/01-Literature Notes/: 2022-04-22 Start Noteing with Obsidian.md  2022-04-30 Smart Pointer - cpp notes.md  2022-05-05 ISA and CPU Pipeline.md  CNN-models--From-AlexNet-to-ResNet.md  DevOps Data Infa Design.md  Learning CUDA.md  Paper Reading - Face Detection.md  Paper Reading - Object Detection.md  Pipeline Schedulers.md  Question100 Computer Architecture and Parallel Computing.md  Question100 Computer System.md  Question100 Parallel Computing.md  Research CI o11n Design.md  deep learning tutorials.md
01-zettelkasten/02-References/: 1998-LeNet5.md  1999-PageRank-algorithm.md  2001-Face-Detection-A-Survey.md  2001-Rapid-Object-Detection-Boosted-Cascade.md  2002-An Adaptive Peer-to-Peer Collision Warning System.md  2003-bengio-neural-network-LM.md  2004-Robust Multipose Face Detection in Images.md  2010-frenet.md  2012-AlexNet.md  2013-rcnn.md  2013-selectiveSearch.md  2013-wordnet.md  2014-GloVe.md  2014-Reinforcement Learning-An Introduction.md  2014-VggNet.md  2014-a survey on motion prediction and risk assessment.md  2015-A Review of Motion Planning Techniques for Automated Vehicles.md  2015-Multi-view-Face-Detection.md  2015-ResNet.md  2015-fast-rcnn.md  2015-faster-rcnn.md  2015-sppnet.md  2016-A Survey of Motion Planning and Control.md  2016-FPN-Feature Pyramid Networks.md  2016-Lane Change Scheduling for Autonomous Vehicles.md  2016-mtcnn.md  2016-ssd.md  20160319-Dengli-Interspeech-tutorial.md  20160319-邓力-IEEE-ICASSP-plenary.md  2017-FPN.md  2017-Lane-Change Social Behavior Generator.md  2017-Malicious URL Detection using Machine Learning-a survey.md  2017-On a Formal Model of Safe and Scalable Self-driving Cars.md  2017-Safe Autonomous Lane Changes in Dense Traffic.md  2017-mask-rcnn.md  2018-Lane Change Strategy for  Autonomous Vehicle.md  2018-Planning and Decision-Making for Autonomous Vehicles.md  2018-review-Planning and Decision-Making for Autonomous Vehicles.md  2019-Human Motion Trajectory Prediction-A Survey.md  2019-Self-Driving Cars-A Survey.md  (+159 more)
01-zettelkasten/03-Ref Sources/: CppCon.md  GotW - Guru of the Week.md  WikiChip.md
01-zettelkasten/04-Ref Authors/: Artem Kirsanov.md  David A.Patterson.md  John L.Hennessy.md  Martin Adams.md
01-zettelkasten/05-Notes Block/: A Tour of C++ - 01.The Basics.md  A Tour of C++ - 02.Containers.md  A Tour of C++ - 03.Class.md  A Tour of C++ - 04.Template.md  A Tour of C++ - 05.Concurrency.md  AddressSanitizer for Linux kernel.md  AddressSanitizer.md  Amdahl-s Law.md  Anatomy of a Modern GPU.md  Apple Chip History - 2022.md  CAQA-01 Fundamentals of Quantitative Design and Analysis.md  CPU Cache.md  CPU Flame Graphs.md  CPU logic design and HCL.md  CUDA Hierarchy Computing Model.md  Case Study - Is OFast Slower than O2.md  Case Study - unique pointer destructor issue.md  Clang optimization levels.md  Compiler - Instruction-Level Parallelism.md  Compiler - Machine-Independent Optimizations.md  Computer Organization and Design - The Hardware and Software Interface.md  Computer Systems - A Programmer-s Perspective.md  DVC-usage.md  Flame Graphs.md  GPU RTX 2080.md  GPU vs CPU.md  Git Cheat Sheet.md  GotW-89 - Smart Pointers.md  GotW-91 - Smart Pointer Parameters.md  Gustafson-s Law.md  Intel CPU Architecture History.md  Key Performance Indicator.md  LeakSanitizer.md  Levels of Parrell Computing.md  Levels of Performance Optimization.md  MIPS CPU Pipeline Introduction.md  Optimizing the Velodyne driver using vector.md  Perf Quick Start.md  Perf and Flame Graph Quick Start.md  Principle of Locality.md  (+36 more)
01-zettelkasten/06-Content Maps/: Compilers Notes Map.md  Computer Hardware Introduction.md  Cpp Notes Map.md  Data Structure and Algorithms.md  Dev Env Setup.md  GPU Architecture.md  HPC Learning Timline.md  How To Run faster.md  (+7 more)
02-tutorial-code/08-cmake-3.29.0-rc4-tutorial-source/Step3/: CMakeLists.txt
02-tutorial-code/08-cmake-3.29.0-rc4-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
02-tutorial-code/11-learn-llvm/03-basic-block/: .matmul.dot  CMakeLists.txt  MyPass.cpp  README.md  compile.sh  draw.sh  input.c  run-opt.sh
02-tutorial-code/12-learn-mlir/02-tiny-matmul-dialect-cpp/: CMakeLists.txt  README.md  compile.sh  hello.mlir  run-opt.sh
02-tutorial-code/12-learn-mlir/02-tiny-matmul-dialect-cpp/include/: TinyMatmulDialect.h
02-tutorial-code/12-learn-mlir/02-tiny-matmul-dialect-cpp/lib/: CMakeLists.txt  TinyMatmulDialect.cpp
02-tutorial-code/12-learn-mlir/02-tiny-matmul-dialect-cpp/tools/: CMakeLists.txt  tc-main.cpp
example-code/: download_zhihu_article.py  env_check.py
knowledge_graph/: knowledge_graph_2021_12_13.md
notes/: bitcask-intro.md  brewers-conjecture-sigact.md  gfs-sosp2003.md  mapreduce-simplified-data-processing-on-large-clusters.md
reading-more-books/: .gitignore  01-财务自由之路.md  02-不能承受的生命之轻-chap1-轻与重.md  03-从晚清到民国.md  04-支付战争.md  05-designing-data-intensive-applications.md  06-密码朋克-自由与互联网的未来.md  07-hadoop-the-definitive-guide.md  LICENSE  README.md
scripts/: setup.sh
topic-reviews/: CNN-models--From-AlexNet-to-ResNet.md  learning-with-noisy-labels.md
(+1322 files in other folders)
